# employee_rotation

./: README.md  pyproject.toml
src/employee_rotation/: __init__.py  app.py  config.py  data.py  load_data.py
src/employee_rotation/models/: __init__.py  employee.py  exceptions.py  rules.py
tests/: test_models.py
