[project]
name = "employee-rotation"
version = "0.1.5"
description = "Assistant for employee training rotation."
readme = "README.md"
authors = [
    { name = "Saoud Salah Eddine", email = "salah_fh@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.22.0",
]

[project.scripts]
employee-rotation = "employee_rotation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
